src/test/deca/syntax/invalid/LE/oublieCrocherclass.deca
//test invalide
//classe sans crochet de fin 

class c1 {
    int a  ;

    void meth1() {
        a = 5 ;
    }
